<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_main_lblToday">Today, June 24</string>
    <string name="fragment_main_lblDegrees">21°</string>
    <string name="fragment_mail_lblDegrees2">8°</string>
    <string name="fragment_main_lblWetherIndicator">Cloudy</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_general_location_title">Location</string>
    <string name="pref_general_location_key" translatable="false">location</string>
    <string name="pref_general_location_default" translatable="false">94043</string>
    <string name="pref_general_units_key" translatable="false">units</string>
    <string name="pref_general_units_value">Units</string>
    <string name="pref_general_units_metric_key" translatable="false">Metric</string>
    <string name="pref_general_units_metric_value">Metric</string>
    <string name="pref_general_units_imperial_key" translatable="false">Imperial</string>
    <string name="pref_general_units_imperial_value">Imperial</string>
    <string name="forecastfragment_lblMap">Show location</string>
    <string name="share">Share</string>

    <!-- Remember to set the root element of strings.xml to be <resources xmlns:xliff="http://schemas.android.com/apk/res-auto"> so it recognizes the xliff tags -->

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <!-- Strings for formatting weather-related data -->

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.spreys.com</string>
    <string name="content_authority">com.spreys.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_general_notifications_key">enable_notifications</string>
    <string name="pref_general_notifications_title">Enable Notifications</string>
    <string name="pref_general_notifications_summary">Be notified of the weather changes</string>
</resources>
