<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Location -->
    <EditTextPreference
        android:title="@string/pref_general_location_title"
        android:key="@string/pref_general_location_key"
        android:defaultValue="@string/pref_general_location_default"
        android:inputType="text"
        android:singleLine="true"
        />

    <!-- Units -->
    <ListPreference
        android:title="Units"
        android:key="units"
        android:entries="@array/units_keys"
        android:entryValues="@array/units_values"
        android:defaultValue="@string/pref_general_units_metric_value"
        />

    <!-- Enable notifications -->
    <CheckBoxPreference
        android:defaultValue="true"
        android:summary="@string/pref_general_notifications_summary"
        android:title="@string/pref_general_notifications_title"
        android:key="@string/pref_general_notifications_key"
        />

</PreferenceScreen>